fixed indicative arrow not showing up in positions draw on initial contract purchase

--- a/src/sass/app_2/_common/drawer/positions-drawer-card.scss
+++ b/src/sass/app_2/_common/drawer/positions-drawer-card.scss
@@ -181,6 +181,9 @@
             width: 16px;
             height: 16px;
 
+            &-complete, &-complete:after {
+                display: none;
+            }
             &:after {
                 content: '';
                 width: 16px;
